--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="estamos_terminando">Estamos terminando, aguarde :D</string>
     <string name="sim">Sim</string>
     <string name="nao">Não</string>
-    <string name="informacoes">INÍCIO</string>
+    <string name="informacoes">Início</string>
     <string name="mapa">Mapa</string>
     <string name="plano">Plano</string>
     <string name="teste">Teste</string>
